--- a/rclcpp/minimal_talker/package.xml
+++ b/rclcpp/minimal_talker/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
-  <name>old_school_talker</name>
+  <name>minimal_talker</name>
   <version>0.0.0</version>
-  <description>A minimal old-school talker which publishes string messages</description>
+  <description>A minimal talker which publishes string messages</description>
   <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
   <license>Apache License 2.0</license>
 
